# Compiler

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  compile_faster.md  enable_inline_plan.md  plan.md  regalloc.md  run.sh  speed_up_dp.md
IR/include/: IR_generator.h  mem2reg.h
IR/src/: IR_generator.cpp  mem2reg.cpp
RCompiler-Testcases/: README.md  extract.py  testcases.sql
RCompiler-Testcases/IR-1/: Makefile  global.json  test_llvm.bash
RCompiler-Testcases/IR-1/builtin/: builtin.ll  builtin.s  builtin_fn.txt  builtin_str.txt
RCompiler-Testcases/working_space/: debugging.elf  debugging.ll  debugging.rx  debugging_my.elf  debugging_my.s  minimal.rx
codegen/: codegen.md
codegen/include/: code_generator.h  register_allocator.h
codegen/src/: code_generator.cpp  register_allocator.cpp
front_end_entry/include/: check_and_generate_RV64.h
front_end_entry/src/: check_and_generate_RV64.cpp
parser/include/: node.h
parser/src/: enumerations.cpp  expression.cpp  functions.cpp  item.cpp  leaf_node.cpp  node.cpp  statements.cpp  structs.cpp
test/: IR_test.cpp  OJ_test.cpp  codegen_test.cpp  mem2reg_test.cpp
